--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# functions
+
+/functions/ical-parser/node_modules
+package-lock.json
+package-lock.json
