--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-jss": "^10.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-simple-image-slider": "^1.0.2",
     "superagent": "^5.2.1"
   },
   "scripts": {
