--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-simple-image-slider": "^1.0.2",
+    "react-slideshow-image": "^1.3.3",
     "superagent": "^5.2.1"
   },
   "scripts": {
