--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "superagent": "^5.2.1"
   },
   "scripts": {
-    "start": "PORT=8080 react-scripts start",
-    "build": "PORT=8080 react-scripts build",
+    "start": "PORT=8080 serve -s build",
+    "local": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
