--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "3.3.0",
     "react-simple-image-slider": "^1.0.2",
     "react-slideshow-image": "^1.3.3",
+    "serve": "^11.3.0",
     "superagent": "^5.2.1"
   },
   "scripts": {
