fixed metadata errors

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "MBC",
-  "name": "Midwest Blockchain Consoritum",
+  "name": "Midwest Blockchain Consortium",
   "icons": [
     {
       "src": "logo192.png",
