--- a/app.yaml
+++ b/app.yaml
@@ -3,12 +3,10 @@
 runtime: nodejs
 env: flex
 # [END runtime]
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
+instance_class: F1
+automatic_scaling:
+  max_instances: 1
+  min_instances: 0
 # [START handlers]
 handlers:
  - url: /
