--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,11 @@
-
 # [START runtime]
-runtime: nodejs
-env: flex
+runtime: nodejs12
+env: standard
 # [END runtime]
-
+instance_class: F1
+automatic_scaling:
+  max_instances: 1
+  min_instances: 0
 # [START handlers]
 handlers:
  - url: /
