--- a/package.json
+++ b/package.json
@@ -3,29 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@material-ui/core": "^4.8.1",
-    "@material-ui/icons": "^4.5.1",
+    "@babel/runtime": "^7.8.4",
+    "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
     "axois": "0.0.1-security",
     "cal-parser": "^1.0.1",
+    "date-and-time": "^0.12.0",
     "fs": "^0.0.1-security",
     "googleapis": "^39.2.0",
     "ical": "^0.6.0",
+    "meed": "^1.0.1",
     "moment": "^2.24.0",
     "node-ical": "^0.10.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-calendar-api": "^1.0.11",
     "react-google-font-loader": "^1.1.0",
-    "react-jss": "^10.0.1",
+    "react-jss": "^10.0.4",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-simple-image-slider": "^1.0.2",
-    "react-slideshow-image": "^1.3.3",
+    "react-slideshow-image": "^1.3.4",
     "serve": "^11.3.0",
     "superagent": "^5.2.1"
   },
@@ -52,7 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "prettier": "^1.19.1"
   }
 }
